Fixed principal layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,83 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".MainActivity"
+    android:background="@drawable/gradient_1">
 
-    <LinearLayout
-        android:id="@+id/linear1"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/addTrackBtn"
+        android:layout_width="370dp"
+        android:layout_height="45dp"
+        android:backgroundTint="@color/cardview_shadow_start_color"
+        android:shadowColor="@color/green_vibrant"
+        android:textColor="@color/green_vibrant"
+        android:textColorHint="@color/green_vibrant"
+        android:onClick="clickToAdd"
+        android:text="ADD A TRACK TO THE LIST"
+        app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seeListBtn" />
+
+
+
+
+    <Button
+        android:id="@+id/seeListBtn"
+        android:layout_width="370dp"
+        android:layout_height="45dp"
+        android:backgroundTint="@color/cardview_shadow_start_color"
+        android:shadowColor="@color/green_vibrant"
+        android:text="SEE THE LIST OF TRACKS"
+        android:layout_marginTop="30dp"
+        android:onClick="clickToList"
+        android:textColor="@color/green_vibrant"
+        android:textColorHint="@color/green_vibrant"
+        app:layout_constraintBottom_toTopOf="@+id/addTrackBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleService" />
+
+    <TextView
+        android:id="@+id/titleService"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:orientation="vertical"
-        android:padding="15dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="TRACK SERVICE!"
-            android:textAlignment="center"
-            android:textColor="@color/pinky_vibrant"
-            android:textSize="75dp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear1"
-        android:id="@+id/linear2">
-
-        <Button
-            android:id="@+id/seeListBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/cardview_shadow_start_color"
-            android:onClick="clickToList"
-            android:text="See all tracks"
-            android:textColor="@color/green_vibrant"
-            android:textSize="27sp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linear3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear2">
-
-        <Button
-            android:id="@+id/addProductBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="clickToAdd"
-            android:backgroundTint="@color/cardview_shadow_start_color"
-            android:text="Add a track"
-            android:textColor="@color/green_vibrant"
-            android:textSize="27sp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linear4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear3">
-
-        <Button
-            android:id="@+id/deleteProductBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:backgroundTint="@color/cardview_shadow_start_color"
-            android:onClick="clickToDelete"
-            android:text="DELETE A TRACK"
-            android:textColor="@color/green_vibrant"
-            android:textSize="27sp" />
-
-    </LinearLayout>
+        android:layout_marginTop="100dp"
+        android:text="TRACK SERVICE"
+        android:textAlignment="center"
+        android:textColor="@color/green_vibrant"
+        android:textSize="43sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/seeListBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/deleteBtn"
+        android:layout_width="370dp"
+        android:layout_height="45dp"
+        android:backgroundTint="@color/cardview_shadow_start_color"
+        android:shadowColor="@color/green_vibrant"
+        android:textColor="@color/green_vibrant"
+        android:text="DELETE A TRACK"
+        android:onClick="clickToDelete"
+        android:textColorHint="@color/green_vibrant"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addTrackBtn" />
 
 
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
